# cp.cpp

./: .gitignore  CMakeLists.txt  template  usaco_template
HW1/: avocado_trees.cpp  deforestation.cpp  jami.cpp  subarray_sumsII.cpp  unlucky_numbers.cpp
HW1/breed_counting/: breed_counting.cpp
HW1/div7/: div7.cpp
HW1/hps/: hps.cpp  hps.in
HW1/maxcross/: maxcross.cpp
HW10/cowntagion/: cowntagion.cpp
HW10/milkvisits/: milkvisits.cpp
HW2/: array_manipulation.cpp
HW2/lazy/: lazy.cpp  lazy.in
HW2/paintbarn/: paintbarn.cpp
HW3/: rectangular_pasture.cpp
HW3/paired_up/: pairup.cpp
HW4/herding/: herding.cpp  herding.in
HW5/lifeguards/: lifeguards.cpp
HW6/: convention2.cpp  moo.cpp
HW8/: mootube.cpp
HW8/perimeter/: perimeter.cpp
