cmake_minimum_required(VERSION 3.16)
project(USACO_Silver)

set(CMAKE_CXX_STANDARD 11)
add_executable(breed_counting HW1/breed_counting/breed_counting.cpp)
add_executable(unlucky_numbers HW1/unlucky_numbers.cpp)
add_executable(jami HW1/jami.cpp)
add_executable(deforestation HW1/deforestation.cpp)
add_executable(div7 HW1/div7/div7.cpp)
add_executable(avocado_trees HW1/avocado_trees.cpp)
add_executable(subarray_sumsII HW1/subarray_sumsII.cpp)
add_executable(hps HW1/hps/hps.cpp)
add_executable(maxcross HW1/maxcross/maxcross.cpp)
add_executable(array_manipulation HW2/array_manipulation.cpp HW3/rectangular_pasture.cpp HW3/paired_up/pairup.cpp HW4/herding/herding.cpp HW5/lifeguards/lifeguards.cpp HW6/moo.cpp HW6/milk_measurement.cpp HW6/convention2.cpp HW8/perimeter/perimeter.cpp HW8/mootube.cpp HW10/milkvisits/milkvisits.cpp HW10/cowntagion/cowntagion.cpp)
add_executable(paintbarn HW2/paintbarn/paintbarn.cpp)
add_executable(lazy HW2/lazy/lazy.cpp)
add_executable(herding HW4/herding/herding.cpp)
add_executable(perimeter HW8/perimeter/perimeter.cpp)
add_executable(milkvisits HW10/milkvisits/milkvisits.cpp)
add_executable(cowntagion HW10/cowntagion/cowntagion.cpp)